# visolex-toolkit

./: .pypirc  README.md  pyproject.toml  requirements.txt
examples/: basic_normalize_nsw.py  detect_nsw.py  normalize_nsw.py  search_nsw.py  train_visolex.py  weakly_supervised_training.py
tests/asset_fetcher/: test.py
tests/dictionary/: test.py
tests/lab/: sample.txt  test_inference.py  test_train.py
tests/lexnorm/: test_basic_normalizer.py  test_detector.py  test_normalizer.py
tests/test_data/: dev.csv  test.csv  train.csv  unlabeled.csv
visolex/: __init__.py  global_variables.py  utils.py
visolex/dictionary/: __init__.py  dictionary.json
visolex/framework_components/: aligned_tokenizer.py  asset_fetcher.py  data_handler.py  log.py  preprocessing.py  regex_expression.py  student.py  teacher.py  trainer.py
visolex/framework_components/normalizer/: trainer.py  trainer_methods.py
visolex/framework_components/normalizer/model_construction/: bartpho.py  phobert.py  visobert.py
visolex/lexnorm/: __init__.py  basic_normalizer.py  detect.py  normalize.py
visolex/llm/: gpt.py
visolex/normalizer/: trainer.py  trainer_methods.py  trainer_tools.py
visolex/normalizer/model_construction/: bartpho.py  phobert.py  visobert.py
